[BUGFIX] add translation

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -2221,5 +2221,61 @@
   "voucher.status.redeemable": "Dapat ditukarkan",
   "voucher.text.fromNow": "Mulai sekarang",
   "voucher.text.items": "barang",
-  "voucher.text.noUsePeriod": "Tidak Ada Periode Penggunaan "
+  "voucher.text.noUsePeriod": "Tidak Ada Periode Penggunaan ",
+  "page.QuestionLibraryCollectionPage.questionLibraryCollection": "Manajemen Bank Soal",
+  "page.QuestionLibraryCollectionPage.deleteQuestionLibraryMessage": "Anda yakin ingin menghapus bank soal ini?",
+  "page.QuestionGroupCollectionPage.questionGroupCollection": "Pengelolaan grup pertanyaan",
+  "page.QuestionGroupCollectionPage.deleteQuestionGroupMessage": "Apakah Anda yakin ingin menghapus grup pertanyaan ini?",
+  "page.QuestionLibraryAdminPage.questionGroupManagement": "Manajemen Bank Soal",
+  "page.QuestionLibraryAdminPage.questionLibrarySettings": "Pengaturan Bank Soal",
+  "page.QuestionLibraryAdminPage.noMemberId": "Tidak ada ID pengguna",
+  "page.QuestionLibraryAdminPage.deleteQuestionGroupMessage": "Apakah Anda yakin ingin menghapus grup pertanyaan ini?",
+  "page.QuestionLibraryBasicForm.questionGroupManagement": "Manajemen Bank Soal",
+  "page.QuestionGroupAdminPage.question": "Pertanyaan",
+  "page.QuestionGroupAdminPage.option": "Opsi",
+  "questionLibrary.label.sortQuestions": "Urutkan Pertanyaan",
+  "questionLibrary.label.addQuestion": "Tambahkan Pertanyaan",
+  "questionLibrary.label.useZhuYinFont": "Gunakan Font Zhuyin",
+  "questionLibrary.label.isAnswer": "Ini adalah jawaban yang benar",
+  "questionLibrary.label.addOption": "Tambahkan Opsi",
+  "questionLibrary.input.untitledQuestionLibrary": "Bank Soal Tanpa Judul",
+  "questionLibrary.input.addQuestionLibrary": "Buat perpustakaan pertanyaan",
+  "questionLibrary.input.untitledQuestionGroup": "Grup Pertanyaan Tanpa Judul",
+  "questionLibrary.input.addQuestionGroup": "Tambah Grup Pertanyaan",
+  "questionLibrary.label.noQuestionLibrary": "Belum ada bank soal yang dibuat",
+  "questionLibrary.label.noQuestionGroup": "Belum ada grup pertanyaan yang dibuat",
+  "questionLibrary.label.latestUpdatedAt": "Waktu Modifikasi Terakhir",
+  "questionLibrary.label.totalQuestions": "Total Pertanyaan",
+  "questionLibrary.label.totalQuestionGroups": "Jumlah grup pertanyaan",
+  "questionLibrary.label.basicFormTitle": "Nama bank soal",
+  "questionLibrary.label.basicFormAbstract": "Ringkasan Bank Soal",
+  "questionLibrary.label.questionLibrary": "Perpustakaan Pertanyaan",
+  "questionLibrary.label.examName": "Nama Ujian",
+  "questionLibrary.label.layout": "Opsi Tata Letak",
+  "questionLibrary.label.explanation": "Jawaban penjelasan",
+  "questionLibrary.label.createNewQuestionGroup": "Buat grup pertanyaan baru",
+  "questionLibrary.label.importFromQuestionLibrary": "Impor dari Bank Soal",
+  "questionLibrary.label.randomlySelectFromQuestionLibrary": "Pertanyaan yang dipilih secara acak dari bank soal",
+  "questionLibrary.label.basicSettings": "Pengaturan Dasar",
+  "questionLibrary.label.renameQuestionGroup": "Ganti Nama Grup Pertanyaan",
+  "questionLibrary.label.confirmDuplicateQuestionGroup": "Konfirmasi DuplicateQuestionGroup?",
+  "questionLibrary.label.draw": "Menggambar darinya",
+  "questionLibrary.label.questions": "Pertanyaan",
+  "questionLibrary.message.successDeletedQuestionLibrary": "Berhasil menghapus bank soal",
+  "questionLibrary.message.successDeletedQuestionGroup": "Grup Pertanyaan Berhasil Dihapus",
+  "questionLibrary.message.failDeletedQuestionGroup": "Gagal menghapus grup pertanyaan",
+  "questionLibrary.message.successSortQuestionGroup": "SuccessSortQuestionGroup",
+  "questionLibrary.message.failSortQuestionGroup": "Gagal mengurutkan pertanyaan",
+  "questionLibrary.message.failAddQuestionGroup": "Gagal menambahkan grup pertanyaan",
+  "questionLibrary.message.successDuplicateQuestionGroup": "Success DuplicateQuestionGroup",
+  "questionLibrary.message.failDuplicateQuestionGroup": "Gagal menggandakan grup pertanyaan",
+  "questionLibrary.message.questionLibraryTitleCanNotNull": "Nama perpustakaan pertanyaan tidak boleh kosong",
+  "questionLibrary.message.questionGroupTitleCanNotNull": "Nama grup pertanyaan tidak boleh kosong",
+  "questionLibrary.message.exceededQuantityOfDraws": "Melebihi jumlah yang dapat digambar",
+  "questionLibrary.message.atLeastChooseOneQuestionGroup": "Silakan pilih setidaknya satu grup pertanyaan!",
+  "common.ui.duplicate": "Duplikat",
+  "common.ui.rename": "Ganti nama",
+  "admin.AdminMenu.questionLibraryManagement": "Manajemen Perpustakaan Pertanyaan",
+  "admin.AdminMenu.questionGroupManagement": "Manajemen Grup Pertanyaan",
+  "admin.AdminMenu.questionLibraryAdmin": "Perpustakaan Pertanyaan"
 }
