--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -2221,5 +2221,61 @@
   "voucher.status.redeemable": "Có thể đổi ",
   "voucher.text.fromNow": " Từ bây giờ ",
   "voucher.text.items": "mặt hàng",
-  "voucher.text.noUsePeriod": "Không useperiod"
+  "voucher.text.noUsePeriod": "Không useperiod",
+  "page.QuestionLibraryCollectionPage.questionLibraryCollection": "Quản lý Ngân hàng Câu hỏi",
+  "page.QuestionLibraryCollectionPage.deleteQuestionLibraryMessage": "Bạn có chắc chắn muốn xóa ngân hàng câu hỏi này không?",
+  "page.QuestionGroupCollectionPage.questionGroupCollection": "Quản lý nhóm câu hỏi",
+  "page.QuestionGroupCollectionPage.deleteQuestionGroupMessage": "Bạn có chắc chắn muốn xóa nhóm câu hỏi này không?",
+  "page.QuestionLibraryAdminPage.questionGroupManagement": "Quản lý Ngân hàng Câu hỏi",
+  "page.QuestionLibraryAdminPage.questionLibrarySettings": "Cài đặt ngân hàng câu hỏi",
+  "page.QuestionLibraryAdminPage.noMemberId": "Không có ID người dùng",
+  "page.QuestionLibraryAdminPage.deleteQuestionGroupMessage": "Bạn có chắc chắn muốn xóa nhóm câu hỏi này không?",
+  "page.QuestionLibraryBasicForm.questionGroupManagement": "Quản lý Ngân hàng Câu hỏi",
+  "page.QuestionGroupAdminPage.question": "Câu hỏi",
+  "page.QuestionGroupAdminPage.option": "Tùy chọn",
+  "questionLibrary.label.sortQuestions": "Sắp xếp câu hỏi",
+  "questionLibrary.label.addQuestion": "Thêm câu hỏi",
+  "questionLibrary.label.useZhuYinFont": "Sử dụng Phông chữ Zhuyin",
+  "questionLibrary.label.isAnswer": "Đây là câu trả lời chính xác",
+  "questionLibrary.label.addOption": "Thêm tùy chọn",
+  "questionLibrary.input.untitledQuestionLibrary": "Ngân hàng câu hỏi chưa có tiêu đề",
+  "questionLibrary.input.addQuestionLibrary": "Tạo thư viện câu hỏi",
+  "questionLibrary.input.untitledQuestionGroup": "Nhóm câu hỏi không có tiêu đề",
+  "questionLibrary.input.addQuestionGroup": "Thêm nhóm câu hỏi",
+  "questionLibrary.label.noQuestionLibrary": "Chưa có ngân hàng câu hỏi nào được tạo",
+  "questionLibrary.label.noQuestionGroup": "Chưa có nhóm câu hỏi nào được tạo",
+  "questionLibrary.label.latestUpdatedAt": "Lần sửa đổi cuối cùng",
+  "questionLibrary.label.totalQuestions": "Tổng số câu hỏi",
+  "questionLibrary.label.totalQuestionGroups": "Số lượng nhóm câu hỏi",
+  "questionLibrary.label.basicFormTitle": "Tên ngân hàng câu hỏi",
+  "questionLibrary.label.basicFormAbstract": "Tóm tắt Ngân hàng Câu hỏi",
+  "questionLibrary.label.questionLibrary": "Thư viện câu hỏi",
+  "questionLibrary.label.examName": "Tên kỳ thi",
+  "questionLibrary.label.layout": "Tùy chọn bố cục",
+  "questionLibrary.label.explanation": "Giải thích câu trả lời",
+  "questionLibrary.label.createNewQuestionGroup": "Tạo một nhóm câu hỏi mới",
+  "questionLibrary.label.importFromQuestionLibrary": "Nhập từ Ngân hàng Câu hỏi",
+  "questionLibrary.label.randomlySelectFromQuestionLibrary": "Câu hỏi được chọn ngẫu nhiên từ ngân hàng câu hỏi",
+  "questionLibrary.label.basicSettings": "Cài đặt cơ bản",
+  "questionLibrary.label.renameQuestionGroup": "Đổi tên nhóm câu hỏi",
+  "questionLibrary.label.confirmDuplicateQuestionGroup": "Xác nhận DuplicateQuestionGroup?",
+  "questionLibrary.label.draw": "Rút ra từ nó",
+  "questionLibrary.label.questions": "Câu hỏi",
+  "questionLibrary.message.successDeletedQuestionLibrary": "Đã xóa thành công ngân hàng câu hỏi",
+  "questionLibrary.message.successDeletedQuestionGroup": "Đã xóa thành công nhóm câu hỏi",
+  "questionLibrary.message.failDeletedQuestionGroup": "Không xóa được nhóm câu hỏi",
+  "questionLibrary.message.successSortQuestionGroup": "SuccessSortQuestionGroup",
+  "questionLibrary.message.failSortQuestionGroup": "Không thể sắp xếp câu hỏi",
+  "questionLibrary.message.failAddQuestionGroup": "Không thêm được nhóm câu hỏi",
+  "questionLibrary.message.successDuplicateQuestionGroup": "Thành công DuplicateQuestionGroup",
+  "questionLibrary.message.failDuplicateQuestionGroup": "Không thể sao chép nhóm câu hỏi",
+  "questionLibrary.message.questionLibraryTitleCanNotNull": "Tên thư viện câu hỏi không được để trống",
+  "questionLibrary.message.questionGroupTitleCanNotNull": "Tên nhóm câu hỏi không được để trống",
+  "questionLibrary.message.exceededQuantityOfDraws": "Vượt quá số lượng có thể rút ra",
+  "questionLibrary.message.atLeastChooseOneQuestionGroup": "Vui lòng chọn ít nhất một nhóm câu hỏi!",
+  "common.ui.duplicate": "Nhân bản",
+  "common.ui.rename": "Đổi tên",
+  "admin.AdminMenu.questionLibraryManagement": "Quản lý Thư viện Câu hỏi",
+  "admin.AdminMenu.questionGroupManagement": "Quản lý nhóm câu hỏi",
+  "admin.AdminMenu.questionLibraryAdmin": "Thư viện câu hỏi"
 }
