--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2221,5 +2221,61 @@
   "voucher.status.redeemable": "可兌換",
   "voucher.text.fromNow": "即日起",
   "voucher.text.items": "個項目",
-  "voucher.text.noUsePeriod": "無使用期限"
+  "voucher.text.noUsePeriod": "無使用期限",
+  "page.QuestionLibraryCollectionPage.questionLibraryCollection": "題庫管理",
+  "page.QuestionLibraryCollectionPage.deleteQuestionLibraryMessage": "確定刪除此題庫？",
+  "page.QuestionGroupCollectionPage.questionGroupCollection": "題組管理",
+  "page.QuestionGroupCollectionPage.deleteQuestionGroupMessage": "確定刪除此題組？",
+  "page.QuestionLibraryAdminPage.questionGroupManagement": "題庫管理",
+  "page.QuestionLibraryAdminPage.questionLibrarySettings": "題庫設定",
+  "page.QuestionLibraryAdminPage.noMemberId": "無使用者ID",
+  "page.QuestionLibraryAdminPage.deleteQuestionGroupMessage": "確定刪除此題組？",
+  "page.QuestionLibraryBasicForm.questionGroupManagement": "題庫管理",
+  "page.QuestionGroupAdminPage.question": "題目",
+  "page.QuestionGroupAdminPage.option": "選項",
+  "questionLibrary.label.sortQuestions": "排序題目",
+  "questionLibrary.label.addQuestion": "新增題目",
+  "questionLibrary.label.useZhuYinFont": "使用注音字形",
+  "questionLibrary.label.isAnswer": "此為正確解答",
+  "questionLibrary.label.addOption": "新增選項",
+  "questionLibrary.input.untitledQuestionLibrary": "未命名題庫",
+  "questionLibrary.input.addQuestionLibrary": "建立題庫",
+  "questionLibrary.input.untitledQuestionGroup": "未命名題組",
+  "questionLibrary.input.addQuestionGroup": "新增題組",
+  "questionLibrary.label.noQuestionLibrary": "尚未建立任何題庫",
+  "questionLibrary.label.noQuestionGroup": "尚未建立任何題組",
+  "questionLibrary.label.latestUpdatedAt": "最後修改時間",
+  "questionLibrary.label.totalQuestions": "總題數",
+  "questionLibrary.label.totalQuestionGroups": "題組數",
+  "questionLibrary.label.basicFormTitle": "題庫名稱",
+  "questionLibrary.label.basicFormAbstract": "題庫簡述",
+  "questionLibrary.label.questionLibrary": "題庫",
+  "questionLibrary.label.examName": "測驗名稱",
+  "questionLibrary.label.layout": "版型選項",
+  "questionLibrary.label.explanation": "解答說明",
+  "questionLibrary.label.createNewQuestionGroup": "建立新題組",
+  "questionLibrary.label.importFromQuestionLibrary": "從題庫匯入",
+  "questionLibrary.label.randomlySelectFromQuestionLibrary": "題庫隨機抽題",
+  "questionLibrary.label.basicSettings": "基本設定",
+  "questionLibrary.label.renameQuestionGroup": "重新命名題組",
+  "questionLibrary.label.confirmDuplicateQuestionGroup": "確認複製此題組?",
+  "questionLibrary.label.draw": "從中抽",
+  "questionLibrary.label.questions": "題",
+  "questionLibrary.message.successDeletedQuestionLibrary": "刪除題庫成功",
+  "questionLibrary.message.successDeletedQuestionGroup": "刪除題組成功",
+  "questionLibrary.message.failDeletedQuestionGroup": "刪除題組失敗",
+  "questionLibrary.message.successSortQuestionGroup": "排序題目成功",
+  "questionLibrary.message.failSortQuestionGroup": "排序題目失敗",
+  "questionLibrary.message.failAddQuestionGroup": "新增題組失敗",
+  "questionLibrary.message.successDuplicateQuestionGroup": "複製題組成功",
+  "questionLibrary.message.failDuplicateQuestionGroup": "複製題組失敗",
+  "questionLibrary.message.questionLibraryTitleCanNotNull": "題庫名稱不可為空",
+  "questionLibrary.message.questionGroupTitleCanNotNull": "題組名稱不可為空",
+  "questionLibrary.message.exceededQuantityOfDraws": "超過可抽選的數量",
+  "questionLibrary.message.atLeastChooseOneQuestionGroup": "請選擇至少一個題組!",
+  "common.ui.duplicate": "複製",
+  "common.ui.rename": "重新命名",
+  "admin.AdminMenu.questionLibraryManagement": "題庫管理",
+  "admin.AdminMenu.questionGroupManagement": "題組管理",
+  "admin.AdminMenu.questionLibraryAdmin": "題目庫"
 }
