[FEATURE] yarn trans

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1582,13 +1582,13 @@
   "order.label.invoiceDonationCode": "Invoice Donation Code",
   "order.label.invoiceEmail": "Invoice Email",
   "order.label.invoiceId": "Invoice ID",
+  "order.label.invoiceIssuedAt": "Invoice Issued At",
   "order.label.invoiceName": "Invoice Name",
   "order.label.invoicePhone": "Invoice Phone",
   "order.label.invoiceStatus": "Invoice Status",
   "order.label.invoiceTarget": "Invoice Object",
   "order.label.invoiceUniformNumber": "Invoice UniformNumber",
   "order.label.invoiceUniformTitle": "Invoice Header",
-  "order.label.invoiceIssuedAt": "Invoice Issued At",
   "order.label.memberEmail": "Member Email",
   "order.label.memberName": "Member Name",
   "order.label.orderCreatedAt": "Order created time",
@@ -1685,6 +1685,7 @@
   "page.CertificateEligibilityListBlock.deleteMemberCertificateWarning": "你確定要刪除此會員的證書？此動作無法還原",
   "page.CertificateEligibilityListBlock.revoke": "撤銷",
   "page.CertificateIntroForm.certificateDescription": "證書描述",
+  "page.CertificatePreviewModal.demoName": "王大明",
   "page.CertificatePublishAdminBlock.noCertificateTemplate": "尚未選擇證書樣板",
   "page.CertificatePublishAdminBlock.noCertificateTitle": "尚未填寫證書名稱",
   "page.CertificatePublishAdminBlock.publishedCertificateText": "現在你的證書已公開發佈，此證書可公開挑戰。",
