--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1582,13 +1582,13 @@
   "order.label.invoiceDonationCode": "Kode Donasi Faktur",
   "order.label.invoiceEmail": "Email Faktur",
   "order.label.invoiceId": "ID Faktur",
+  "order.label.invoiceIssuedAt": "Waktu penerbitan faktur",
   "order.label.invoiceName": "Nama Faktur",
   "order.label.invoicePhone": "Telepon Faktur",
   "order.label.invoiceStatus": "Status Faktur",
   "order.label.invoiceTarget": "Objek Faktur",
   "order.label.invoiceUniformNumber": "Invoice UniformNumber",
   "order.label.invoiceUniformTitle": "Tajuk Faktur",
-  "order.label.invoiceIssuedAt": "Waktu penerbitan faktur",
   "order.label.memberEmail": "Email Anggota",
   "order.label.memberName": "Nama Anggota",
   "order.label.orderCreatedAt": "Waktu pembuatan pesanan",
@@ -1685,6 +1685,7 @@
   "page.CertificateEligibilityListBlock.deleteMemberCertificateWarning": "你確定要刪除此會員的證書？此動作無法還原",
   "page.CertificateEligibilityListBlock.revoke": "撤銷",
   "page.CertificateIntroForm.certificateDescription": "證書描述",
+  "page.CertificatePreviewModal.demoName": "王大明",
   "page.CertificatePublishAdminBlock.noCertificateTemplate": "尚未選擇證書樣板",
   "page.CertificatePublishAdminBlock.noCertificateTitle": "尚未填寫證書名稱",
   "page.CertificatePublishAdminBlock.publishedCertificateText": "現在你的證書已公開發佈，此證書可公開挑戰。",
