--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1582,13 +1582,13 @@
   "order.label.invoiceDonationCode": " Mã đóng góp hóa đơn ",
   "order.label.invoiceEmail": " Email hóa đơn ",
   "order.label.invoiceId": " ID hóa đơn ",
+  "order.label.invoiceIssuedAt": "Thời gian phát hành hóa đơn",
   "order.label.invoiceName": " Tên hóa đơn ",
   "order.label.invoicePhone": " Invoice Phone ",
   "order.label.invoiceStatus": " Trạng thái hóa đơn ",
   "order.label.invoiceTarget": " Đối tượng Hóa đơn ",
   "order.label.invoiceUniformNumber": " Invoice UniformNumber ",
   "order.label.invoiceUniformTitle": " Tiêu đề hóa đơn ",
-  "order.label.invoiceIssuedAt": "Thời gian phát hành hóa đơn",
   "order.label.memberEmail": " Email Thành viên ",
   "order.label.memberName": " Tên Thành viên ",
   "order.label.orderCreatedAt": "Thời gian thành lập đơn đặt hàng",
@@ -1685,6 +1685,7 @@
   "page.CertificateEligibilityListBlock.deleteMemberCertificateWarning": "你確定要刪除此會員的證書？此動作無法還原",
   "page.CertificateEligibilityListBlock.revoke": "撤銷",
   "page.CertificateIntroForm.certificateDescription": "證書描述",
+  "page.CertificatePreviewModal.demoName": "王大明",
   "page.CertificatePublishAdminBlock.noCertificateTemplate": "尚未選擇證書樣板",
   "page.CertificatePublishAdminBlock.noCertificateTitle": "尚未填寫證書名稱",
   "page.CertificatePublishAdminBlock.publishedCertificateText": "現在你的證書已公開發佈，此證書可公開挑戰。",
