--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -1582,13 +1582,13 @@
   "order.label.invoiceDonationCode": "发票捐赠码",
   "order.label.invoiceEmail": "发票信箱",
   "order.label.invoiceId": "发票编号",
+  "order.label.invoiceIssuedAt": "发票开立时间",
   "order.label.invoiceName": "发票姓名",
   "order.label.invoicePhone": "发票电话",
   "order.label.invoiceStatus": "发票状态",
   "order.label.invoiceTarget": "发票对象",
   "order.label.invoiceUniformNumber": "发票统编",
   "order.label.invoiceUniformTitle": "发票抬头",
-  "order.label.invoiceIssuedAt": "发票开立时间",
   "order.label.memberEmail": "会员信箱",
   "order.label.memberName": "会员姓名",
   "order.label.orderCreatedAt": "订单建立时间",
@@ -1685,6 +1685,7 @@
   "page.CertificateEligibilityListBlock.deleteMemberCertificateWarning": "你確定要刪除此會員的證書？此動作無法還原",
   "page.CertificateEligibilityListBlock.revoke": "撤銷",
   "page.CertificateIntroForm.certificateDescription": "證書描述",
+  "page.CertificatePreviewModal.demoName": "王大明",
   "page.CertificatePublishAdminBlock.noCertificateTemplate": "尚未選擇證書樣板",
   "page.CertificatePublishAdminBlock.noCertificateTitle": "尚未填寫證書名稱",
   "page.CertificatePublishAdminBlock.publishedCertificateText": "現在你的證書已公開發佈，此證書可公開挑戰。",
