--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1582,13 +1582,13 @@
   "order.label.invoiceDonationCode": "發票捐贈碼",
   "order.label.invoiceEmail": "發票信箱",
   "order.label.invoiceId": "發票編號",
+  "order.label.invoiceIssuedAt": "發票開立時間",
   "order.label.invoiceName": "發票姓名",
   "order.label.invoicePhone": "發票電話",
   "order.label.invoiceStatus": "發票狀態",
   "order.label.invoiceTarget": "發票對象",
   "order.label.invoiceUniformNumber": "發票統編",
   "order.label.invoiceUniformTitle": "發票抬頭",
-  "order.label.invoiceIssuedAt": "發票開立時間",
   "order.label.memberEmail": "會員信箱",
   "order.label.memberName": "會員姓名",
   "order.label.orderCreatedAt": "訂單建立時間",
@@ -1685,6 +1685,7 @@
   "page.CertificateEligibilityListBlock.deleteMemberCertificateWarning": "你確定要刪除此會員的證書？此動作無法還原",
   "page.CertificateEligibilityListBlock.revoke": "撤銷",
   "page.CertificateIntroForm.certificateDescription": "證書描述",
+  "page.CertificatePreviewModal.demoName": "王大明",
   "page.CertificatePublishAdminBlock.noCertificateTemplate": "尚未選擇證書樣板",
   "page.CertificatePublishAdminBlock.noCertificateTitle": "尚未填寫證書名稱",
   "page.CertificatePublishAdminBlock.publishedCertificateText": "現在你的證書已公開發佈，此證書可公開挑戰。",
