[BUGFIX] modify translation files

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -2233,11 +2233,11 @@
   "page.QuestionLibraryBasicForm.questionGroupManagement": "Question Bank Management",
   "page.QuestionGroupAdminPage.question": "Question",
   "page.QuestionGroupAdminPage.option": "Options",
-  "questionLibrary.label.sortQuestions": "Sort Questions",
-  "questionLibrary.label.addQuestion": "Add Question",
-  "questionLibrary.label.useZhuYinFont": "Use Zhuyin Font",
-  "questionLibrary.label.isAnswer": "This is the correct answer",
-  "questionLibrary.label.addOption": "Add Option",
+  "questionLibrary.ui.sortQuestions": "Sort Questions",
+  "questionLibrary.ui.addQuestion": "Add Question",
+  "questionLibrary.ui.useZhuYinFont": "Use Zhuyin Font",
+  "questionLibrary.ui.isAnswer": "This is the correct answer",
+  "questionLibrary.ui.addOption": "Add Option",
   "questionLibrary.input.untitledQuestionLibrary": "Untitled Question Bank",
   "questionLibrary.input.addQuestionLibrary": "Create question library",
   "questionLibrary.input.untitledQuestionGroup": "Untitled Question Group",
