--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -2233,11 +2233,11 @@
   "page.QuestionLibraryBasicForm.questionGroupManagement": "Manajemen Bank Soal",
   "page.QuestionGroupAdminPage.question": "Pertanyaan",
   "page.QuestionGroupAdminPage.option": "Opsi",
-  "questionLibrary.label.sortQuestions": "Urutkan Pertanyaan",
-  "questionLibrary.label.addQuestion": "Tambahkan Pertanyaan",
-  "questionLibrary.label.useZhuYinFont": "Gunakan Font Zhuyin",
-  "questionLibrary.label.isAnswer": "Ini adalah jawaban yang benar",
-  "questionLibrary.label.addOption": "Tambahkan Opsi",
+  "questionLibrary.ui.sortQuestions": "Urutkan Pertanyaan",
+  "questionLibrary.ui.addQuestion": "Tambahkan Pertanyaan",
+  "questionLibrary.ui.useZhuYinFont": "Gunakan Font Zhuyin",
+  "questionLibrary.ui.isAnswer": "Ini adalah jawaban yang benar",
+  "questionLibrary.ui.addOption": "Tambahkan Opsi",
   "questionLibrary.input.untitledQuestionLibrary": "Bank Soal Tanpa Judul",
   "questionLibrary.input.addQuestionLibrary": "Buat perpustakaan pertanyaan",
   "questionLibrary.input.untitledQuestionGroup": "Grup Pertanyaan Tanpa Judul",
