--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -2233,11 +2233,11 @@
   "page.QuestionLibraryBasicForm.questionGroupManagement": "Quản lý Ngân hàng Câu hỏi",
   "page.QuestionGroupAdminPage.question": "Câu hỏi",
   "page.QuestionGroupAdminPage.option": "Tùy chọn",
-  "questionLibrary.label.sortQuestions": "Sắp xếp câu hỏi",
-  "questionLibrary.label.addQuestion": "Thêm câu hỏi",
-  "questionLibrary.label.useZhuYinFont": "Sử dụng Phông chữ Zhuyin",
-  "questionLibrary.label.isAnswer": "Đây là câu trả lời chính xác",
-  "questionLibrary.label.addOption": "Thêm tùy chọn",
+  "questionLibrary.ui.sortQuestions": "Sắp xếp câu hỏi",
+  "questionLibrary.ui.addQuestion": "Thêm câu hỏi",
+  "questionLibrary.ui.useZhuYinFont": "Sử dụng Phông chữ Zhuyin",
+  "questionLibrary.ui.isAnswer": "Đây là câu trả lời chính xác",
+  "questionLibrary.ui.addOption": "Thêm tùy chọn",
   "questionLibrary.input.untitledQuestionLibrary": "Ngân hàng câu hỏi chưa có tiêu đề",
   "questionLibrary.input.addQuestionLibrary": "Tạo thư viện câu hỏi",
   "questionLibrary.input.untitledQuestionGroup": "Nhóm câu hỏi không có tiêu đề",
