--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -2233,11 +2233,11 @@
   "page.QuestionLibraryBasicForm.questionGroupManagement": "题库管理",
   "page.QuestionGroupAdminPage.question": "题目",
   "page.QuestionGroupAdminPage.option": "选项",
-  "questionLibrary.label.sortQuestions": "排序题目",
-  "questionLibrary.label.addQuestion": "新增题目",
-  "questionLibrary.label.useZhuYinFont": "使用注音字形",
-  "questionLibrary.label.isAnswer": "此为正确解答",
-  "questionLibrary.label.addOption": "新增选项",
+  "questionLibrary.ui.sortQuestions": "排序题目",
+  "questionLibrary.ui.addQuestion": "新增题目",
+  "questionLibrary.ui.useZhuYinFont": "使用注音字形",
+  "questionLibrary.ui.isAnswer": "此为正确解答",
+  "questionLibrary.ui.addOption": "新增选项",
   "questionLibrary.input.untitledQuestionLibrary": "未命名题库",
   "questionLibrary.input.addQuestionLibrary": "建立题库",
   "questionLibrary.input.untitledQuestionGroup": "未命名题组",
