--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2233,11 +2233,11 @@
   "page.QuestionLibraryBasicForm.questionGroupManagement": "題庫管理",
   "page.QuestionGroupAdminPage.question": "題目",
   "page.QuestionGroupAdminPage.option": "選項",
-  "questionLibrary.label.sortQuestions": "排序題目",
-  "questionLibrary.label.addQuestion": "新增題目",
-  "questionLibrary.label.useZhuYinFont": "使用注音字形",
-  "questionLibrary.label.isAnswer": "此為正確解答",
-  "questionLibrary.label.addOption": "新增選項",
+  "questionLibrary.ui.sortQuestions": "排序題目",
+  "questionLibrary.ui.addQuestion": "新增題目",
+  "questionLibrary.ui.useZhuYinFont": "使用注音字形",
+  "questionLibrary.ui.isAnswer": "此為正確解答",
+  "questionLibrary.ui.addOption": "新增選項",
   "questionLibrary.input.untitledQuestionLibrary": "未命名題庫",
   "questionLibrary.input.addQuestionLibrary": "建立題庫",
   "questionLibrary.input.untitledQuestionGroup": "未命名題組",
