--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2329,13 +2329,17 @@
   "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
   "page.GiftPlanCollectionAdminPage.giftPlanTitle": "贈品方案名稱",
   "page.GiftPlanCollectionAdminPage.giftItemName": "贈品項目",
-  "page.GiftPlanCollectionAdminPage.deliver": "是，需索取寄送地址",
-  "page.GiftPlanCollectionAdminPage.online": "否，線上自行交付",
+  "page.GiftPlanCollectionAdminPage.isDeliverable": "需索取寄送地址",
+  "page.GiftPlanCollectionAdminPage.isNotDeliverable": "線上自行交付",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.ui.createGiftPlan": "建立贈品",
   "page.*.discontinued": "已下架",
   "page.GriftPlanCollectionPage.deleteGriftPlanMessage": "確定刪除此贈品方案？",
   "common.ui.discontinue": "下架",
   "page.GriftPlanCollectionPage.discontinueGriftPlanMessage": "確定下架此贈品方案？",
-  "page.GiftPlanCollectionAdminPage.editGiftPlan": "編輯贈品方案"
+  "page.GiftPlanCollectionAdminPage.editGiftPlan": "編輯贈品方案",
+  "page.GiftPlanCollectionAdminPage.giftCover": "贈品封面",
+  "page.GiftPlanCollectionAdminPage.giftDeliverMethod": "贈品交付方式",
+  "page.GiftPlanCollectionAdminPage.createAt": "建立日期",
+  "page.GiftPlanCollectionAdminPage.giftCoverTips": "建議圖片尺寸：600*600px"
 }
