--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1881,8 +1881,10 @@
   "program.label.allProgram": "全部課程",
   "program.label.allowMultipleAnswers": "允許多個正確解答",
   "program.label.answerDescription": "解答說明",
-  "program.label.availableForAllContent": "可看課程所有內容",
-  "program.label.availableForPastContent": "可看過去內容",
+  "program.ProgramPlanAdminModal.availableForAllContent": "可看課程所有內容",
+  "program.ProgramPlanAdminModal.availableForPastContent": "可看指定方案過去與未來內容",
+  "program.label.availableToGoBack": "可返回前題",
+  "program.label.availableToRetry": "可重新測驗",
   "program.label.choice": "選項",
   "program.label.chooseCaptionLanguage": "選擇字幕語系",
   "program.label.contentPlan": "適用方案",
@@ -1899,25 +1901,26 @@
   "program.label.exerciseStatistics": "答題狀況",
   "program.label.individualExercise": "個別表現",
   "program.label.isCorrectAnswer": "此為正確解答",
-  "program.label.isPublished": "是否顯示方案",
+  "program.ProgramPlanAdminModal.isPublished": "是否顯示方案",
   "program.label.markIssueAs": "標記為 {status}",
   "program.label.memberList": "學員名單",
   "program.label.noExercise": "目前尚無任何測驗成果",
   "program.label.notDeliveryOnly": "僅顯示未交付",
   "program.label.notifyUpdate": "通知內容更新",
   "program.label.passingScore": "及格分數",
-  "program.label.permissionType": "選擇內容觀看權限",
+  "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.label.perpetualPlanType": "單次付費",
-  "program.label.planDescription": "方案描述",
+  "program.ProgramPlanAdminModal.planDescription": "方案描述",
+  "program.ProgramPlanAdminModal.planTitle": "方案名稱",
   "program.label.planField": "方案：",
   "program.label.planTitle": "方案名稱",
   "program.label.points": "單題分數",
   "program.label.practice": "作業練習",
   "program.label.programAbstract": "課程摘要",
   "program.label.programDescription": "課程描述",
-  "program.label.programExpirationNotice": "課程到期通知",
+  "program.ProgramPlanAdminModal.programExpirationNotice": "課程到期通知",
   "program.label.programPlanType": "選擇課程付費方案",
-  "program.label.published": "發售，上架後立即開賣",
+  "program.ProgramPlanAdminModal.published": "發售，上架後立即開賣",
   "program.label.question": "題目",
   "program.label.salePrice": "優惠價 (若無請留空)",
   "program.label.score": "分數",
@@ -1925,11 +1928,11 @@
   "program.label.selectDeliveryAt": "選擇啟用日期",
   "program.label.selectExercise": "選擇測驗",
   "program.label.show": "顯示",
-  "program.label.subscriptionPeriodType": "訂閱週期",
-  "program.label.subscriptionPlan": "訂閱付費方案",
+  "program.ProgramPlanAdminModal.subscriptionPeriodType": "訂閱週期",
+  "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.label.subscriptionPlanType": "訂閱付費",
-  "program.label.unavailableForPastContent": "不可看過去內容",
-  "program.label.unpublished": "停售，此方案暫停對外銷售並隱藏",
+  "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
+  "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
   "program.label.wholeProgram": "全部課程",
   "program.status.accepted": "已通過",
   "program.status.approved": "審核通過",
@@ -2343,5 +2346,12 @@
   "page.GiftPlanCollectionAdminPage.createAt": "建立日期",
   "page.GiftPlanCollectionAdminPage.giftCoverTips": "建議圖片尺寸：600*600px",
   "page.GiftPlanCollectionAdminPage.giftPlanTitleIsRequired": "贈品方案名稱為必填",
-  "page.GiftPlanCollectionAdminPage.customGiftNameIsRequired": "贈品項目為必填"
+  "page.GiftPlanCollectionAdminPage.customGiftNameIsRequired": "贈品項目為必填",
+  "common.label.allGiftPlan": "所有贈品方案",
+  "form.*.startedAt": "開始日期",
+  "form.*.endedAt": "截止日期",
+  "form.GiftPlanInput.pleaseSelectAGiftPlan": "請選擇一個贈品方案",
+  "form.GiftPlanInput.noGiftPlan": "無贈品",
+  "form.GiftPlanInput.hasGiftPlan": "有贈品",
+  "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品"
 }
