[REFATOR] modify translations path

--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2330,23 +2330,23 @@
   "admin.AdminMenu.venueManagement": "場地管理",
   "admin.AdminMenu.giftPlans": "贈品方案",
   "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
-  "page.GiftPlanCollectionAdminPage.giftPlanTitle": "贈品方案名稱",
-  "page.GiftPlanCollectionAdminPage.giftItemName": "贈品項目",
-  "page.GiftPlanCollectionAdminPage.isDeliverable": "需索取寄送地址",
-  "page.GiftPlanCollectionAdminPage.isNotDeliverable": "線上自行交付",
+  "giftPlan.GiftPlanCollectionAdminModal.title": "贈品方案名稱",
+  "giftPlan.GiftPlanCollectionAdminModal.giftItemName": "贈品項目",
+  "giftPlan.GiftPlanCollectionAdminModal.isDeliverable": "需索取寄送地址",
+  "giftPlan.GiftPlanCollectionAdminModal.isNotDeliverable": "線上自行交付",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.ui.createGiftPlan": "建立贈品",
   "page.*.discontinued": "已下架",
-  "page.GriftPlanCollectionPage.deleteGriftPlanMessage": "確定刪除此贈品方案？",
+  "giftPlan.GiftPlanDeleteAdminModal.deleteGriftPlanMessage": "確定刪除此贈品方案？",
   "common.ui.discontinue": "下架",
-  "page.GriftPlanCollectionPage.discontinueGriftPlanMessage": "確定下架此贈品方案？",
-  "page.GiftPlanCollectionAdminPage.editGiftPlan": "編輯贈品方案",
-  "page.GiftPlanCollectionAdminPage.giftCover": "贈品封面",
-  "page.GiftPlanCollectionAdminPage.giftDeliverMethod": "贈品交付方式",
-  "page.GiftPlanCollectionAdminPage.createAt": "建立日期",
-  "page.GiftPlanCollectionAdminPage.giftCoverTips": "建議圖片尺寸：600*600px",
-  "page.GiftPlanCollectionAdminPage.giftPlanTitleIsRequired": "贈品方案名稱為必填",
-  "page.GiftPlanCollectionAdminPage.customGiftNameIsRequired": "贈品項目為必填",
+  "giftPlan.GiftPlanPublishAdminModal.discontinueGriftPlanMessage": "確定下架此贈品方案？",
+  "giftPlan.GiftPlanCollectionAdminModal.editGiftPlan": "編輯贈品方案",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCover": "贈品封面",
+  "giftPlan.GiftPlanCollectionAdminModal.giftDeliverMethod": "贈品交付方式",
+  "GiftPlanCollectionAdminPage.GiftPlanCollectionBlock.createAt": "建立日期",
+  "giftPlan.GiftPlanCollectionAdminModal.giftCoverTips": "建議圖片尺寸：600*600px",
+  "giftPlan.GiftPlanCollectionAdminModal.titleIsRequired": "贈品方案名稱為必填",
+  "giftPlan.GiftPlanCollectionAdminModal.customGiftNameIsRequired": "贈品項目為必填",
   "common.label.allGiftPlan": "所有贈品方案",
   "form.*.startedAt": "開始日期",
   "form.*.endedAt": "截止日期",
